toolkit/content/xul.css
/* ... */
:
root
{
text
-
rendering
:
optimizeLegibility
;
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
general
.
xml
#
root
-
element
"
)
;
}
:
root
:
-
moz
-
locale
-
dir
(
rtl
)
{
direction
:
rtl
;
}
/
*
hide
the
content
and
destroy
the
frame
*
/
[
hidden
=
"
true
"
]
{
display
:
none
;
}
/
*
hide
the
content
but
don
'
t
destroy
the
frames
*
/
[
collapsed
=
"
true
"
]
[
moz
-
collapsed
=
"
true
"
]
{
visibility
:
collapse
;
}
/
*
:
:
:
:
:
:
:
:
:
:
:
:
Rules
for
'
hiding
'
portions
of
the
chrome
for
special
:
:
kinds
of
windows
(
not
JUST
browser
windows
)
with
toolbars
:
:
:
:
:
*
/
window
[
chromehidden
~
=
"
menubar
"
]
.
chromeclass
-
menubar
window
[
chromehidden
~
=
"
directories
"
]
.
chromeclass
-
directories
window
[
chromehidden
~
=
"
status
"
]
.
chromeclass
-
status
window
[
chromehidden
~
=
"
extrachrome
"
]
.
chromeclass
-
extrachrome
window
[
chromehidden
~
=
"
location
"
]
.
chromeclass
-
location
window
[
chromehidden
~
=
"
location
"
]
[
chromehidden
~
=
"
toolbar
"
]
.
chromeclass
-
toolbar
window
[
chromehidden
~
=
"
toolbar
"
]
.
chromeclass
-
toolbar
-
additional
{
display
:
none
;
}
/
*
:
:
:
:
:
:
:
:
:
:
:
:
Rules
for
forcing
direction
for
entry
and
display
of
URIs
:
:
or
URI
elements
:
:
:
:
:
*
/
.
uri
-
element
{
direction
:
ltr
!
important
;
}
/
*
*
*
*
*
*
elements
that
have
no
visual
representation
*
*
*
*
*
*
/
script
data
xbl
|
children
commands
commandset
command
broadcasterset
broadcaster
observes
keyset
key
toolbarpalette
toolbarset
template
rule
conditions
action
bindings
binding
content
member
triple
treechildren
treeitem
treeseparator
treerow
treecell
{
display
:
none
;
}
/
*
*
*
*
*
*
*
*
*
*
focus
rules
*
*
*
*
*
*
*
*
*
*
/
button
checkbox
colorpicker
[
type
=
"
button
"
]
datepicker
[
type
=
"
grid
"
]
menulist
radiogroup
tree
browser
editor
iframe
{
-
moz
-
user
-
focus
:
normal
;
}
menulist
[
editable
=
"
true
"
]
{
-
moz
-
user
-
focus
:
ignore
;
}
/
*
*
*
*
*
*
*
*
window
&
page
*
*
*
*
*
*
/
window
page
{
overflow
:
-
moz
-
hidden
-
unscrollable
;
-
moz
-
box
-
orient
:
vertical
;
}
/
*
*
*
*
*
*
*
*
box
*
*
*
*
*
*
*
/
vbox
{
-
moz
-
box
-
orient
:
vertical
;
}
bbox
{
-
moz
-
box
-
align
:
baseline
;
}
/
*
*
*
*
*
*
*
*
*
*
button
*
*
*
*
*
*
*
*
*
*
/
button
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
button
.
xml
#
button
"
)
;
}
button
[
type
=
"
repeat
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
button
.
xml
#
button
-
repeat
"
)
;
}
button
[
type
=
"
menu
"
]
button
[
type
=
"
panel
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
button
.
xml
#
menu
"
)
;
}
button
[
type
=
"
menu
-
button
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
button
.
xml
#
menu
-
button
"
)
;
}
%
ifdef
MOZ_WIDGET_GTK
/
*
*
*
*
*
*
*
*
*
detection
of
system
setting
to
use
icons
in
buttons
*
*
*
*
*
*
*
*
*
*
*
/
button
[
label
]
:
not
(
[
label
=
"
"
]
)
>
.
button
-
box
>
.
button
-
icon
:
not
(
:
-
moz
-
system
-
metric
(
images
-
in
-
buttons
)
)
button
[
label
]
:
not
(
[
label
=
"
"
]
)
>
.
button
-
box
>
.
box
-
inherit
>
.
button
-
icon
:
not
(
:
-
moz
-
system
-
metric
(
images
-
in
-
buttons
)
)
{
display
:
none
;
}
%
endif
/
*
*
*
*
*
*
*
*
*
*
toolbarbutton
*
*
*
*
*
*
*
*
*
*
/
toolbarbutton
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
toolbarbutton
.
xml
#
toolbarbutton
"
)
;
}
toolbarbutton
[
type
=
"
menu
"
]
toolbarbutton
[
type
=
"
panel
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
toolbarbutton
.
xml
#
menu
"
)
;
}
toolbarbutton
[
type
=
"
menu
-
button
"
]
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
toolbarbutton
.
xml
#
menu
-
button
"
)
;
}
toolbar
[
mode
=
"
icons
"
]
.
toolbarbutton
-
text
toolbar
[
mode
=
"
text
"
]
.
toolbarbutton
-
icon
{
display
:
none
;
}
/
*
*
*
*
*
*
*
*
browser
editor
iframe
*
*
*
*
*
*
*
*
/
browser
editor
iframe
{
display
:
inline
;
}
browser
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
browser
.
xml
#
browser
"
)
;
}
editor
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
editor
.
xml
#
editor
"
)
;
}
iframe
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
general
.
xml
#
iframe
"
)
;
}
/
*
*
*
*
*
*
*
*
*
*
notifications
*
*
*
*
*
*
*
*
*
*
/
notificationbox
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
notification
.
xml
#
notificationbox
"
)
;
-
moz
-
box
-
orient
:
vertical
;
}
.
notificationbox
-
stack
{
overflow
:
-
moz
-
hidden
-
unscrollable
;
}
notification
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
notification
.
xml
#
notification
"
)
;
transition
:
margin
-
top
300ms
opacity
300ms
;
}
/
*
*
*
*
*
*
*
*
*
*
*
popup
notification
*
*
*
*
*
*
*
*
*
*
*
*
/
popupnotification
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
notification
.
xml
#
popup
-
notification
"
)
;
}
.
popup
-
notification
-
menubutton
:
not
(
[
label
]
)
{
display
:
none
;
}
/
*
*
*
*
*
*
*
*
*
*
image
*
*
*
*
*
*
*
*
*
*
/
image
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
general
.
xml
#
image
"
)
;
}
/
*
*
*
*
*
*
*
*
*
*
checkbox
*
*
*
*
*
*
*
*
*
*
/
checkbox
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
checkbox
.
xml
#
checkbox
"
)
;
}
/
*
*
*
*
*
*
*
*
*
*
radio
*
*
*
*
*
*
*
*
*
*
/
radiogroup
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
radio
.
xml
#
radiogroup
"
)
;
-
moz
-
box
-
orient
:
vertical
;
}
radio
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
radio
.
xml
#
radio
"
)
;
}
/
*
*
*
*
*
*
*
*
groupbox
*
*
*
*
*
*
*
*
*
/
groupbox
{
-
moz
-
binding
:
url
(
"
chrome
:
/
/
global
/
content
/
bindings
/
groupbox
.
xml
#
groupbox
"
)
;
display
:
-
moz
-
groupbox
;
}
/* ... */

